--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -3,6 +3,11 @@ server {
 
     root /var/www;
 
+    location = /index.html {
+        add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        expires off;
+    } 
+
     location / {
         index index.html;
         try_files $uri $uri/ /index.html =404;
